k8s-ingress-external.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${APP_NAME}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "false"
  labels:
    app: ${APP_LABEL}
spec:
  tls:
    - hosts:
      - ${DEPLOY_HOST}
      - www.${DEPLOY_HOST}
      secretName: ${APP_NAME}
  rules:
  - host: ${DEPLOY_HOST}
    http:
      paths:
      - backend:
          serviceName: ${SERVICE_NAME}
          servicePort: 80
  - host: www.${DEPLOY_HOST}
    http:
      paths:
      - backend:
          serviceName: ${SERVICE_NAME}
          servicePort: 80
