k8s-ingress-internal.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${APP_NAME}
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
  labels:
    app: ${APP_LABEL}
spec:
  tls:
    - hosts:
      - ${DEPLOY_HOST}
      secretName: ${APP_NAME}
  rules:
  - host: ${DEPLOY_HOST}
    http:
      paths:
      - backend:
          serviceName: ${SERVICE_NAME}
          servicePort: 80
